lab3/subnet.tf
# Create 2 subnets
resource "aws_subnet" "subnet" {
  for_each   = var.subnets
  vpc_id     = aws_vpc.vpc.id
  cidr_block = each.value.cidr_block
  tags = {
    Name = each.value.name
  }

}
